# reqlix

./: .cursorrules  .gitignore  Cargo.toml  LICENSE  README.md  REQUIREMENTS_ANALYSIS.md
.github/workflows/: release.yml
docs/development/: .AGENTS.md
docs/development/requirements/: AGENTS.md  general.md
src/: constants.rs  descriptions.rs  filesystem.rs  handlers.rs  helpers.rs  lib.rs  main.rs  models.rs  params.rs  parsing.rs  response.rs  server.rs  tools.yaml  validation.rs
tests/: unit.rs
tests/unit/: category_helpers_tests.rs  chapter_parsing_tests.rs  configuration_tests.rs  file_system_tests.rs  index_parsing_tests.rs  integration_tests.rs  markdown_parsing_tests.rs  name_and_file_validation_tests.rs  new_requirements_tests.rs  parameter_constraints_tests.rs  prefix_calculation_tests.rs  requirement_parsing_tests.rs  requirements_storage_format_tests.rs  search_requirements_tests.rs  tool_delete_requirement_tests.rs  tool_get_categories_tests.rs  tool_get_chapters_tests.rs  tool_get_instructions_tests.rs  tool_get_requirement_tests.rs  tool_get_requirements_tests.rs  tool_get_version_tests.rs  tool_insert_requirement_tests.rs  tool_search_requirements_tests.rs  tool_update_requirement_tests.rs  validation_tests.rs
tests/unit/common/: mod.rs
